# dotfiles

./: .envrc  .gitignore  .luarc.json  .sops.yaml  README.md  apply-system.sh  c_.nix  credentials.yml  default.nix  dev-shell.nix  flake.nix  keepass.kdbx  mac_photos  overlays.nix  secrets.nix  shell.nix
alacritty/: alacritty.yml
dev/pixi/: pyproject.toml
dev/pixi/repl/: apple_photos.py
devel/: configuration.nix  flake.nix  shell.nix
devel-nix/: flake.nix  home.nix
docs/: DEV.md  local-nixlib-in-nix-repl.md  vim-plugins.md
hm-base/: flake.nix  home.nix
home-nix/: flake.nix  home.nix
hosts/: default.nix
lib/: default.nix  serde.nix  test.nix
lib-nix/: default.nix
modules/: amdgpu.sys.nix  base.sys.nix  gpu.sys.nix  kde.sys.nix  minimal.sys.nix  mosh.sys.nix  nvgpu.sys.nix  opengl.sys.nix  pipewire.audio.sys.nix  pulseaudio.sys.nix  secrets.nix  ssh.sys.nix  storage.perso.sys.nix  tailscale.sys.nix  wifi.sys.nix
native_configs/: README.md
neovim/: init.lua
nix/: flake.nix
nix-conf/: secrets.nix
nixops/: simple_hydra.nix  simple_hydra_vbox.nix
scripts/: apply-system.sh  config-sysnix.sh  hm-switch.sh  list-generations.sh  upload-to-cache.sh  vim_dsl.py
secrets/: _nhitrl.age  default.nix  s3fs.age  s3fs.digital-garden.age  wifi.env.age
ssh/: authorized_keys  config
starship/: starship.toml
system/: configuration.nix  flake.nix  hardware-configuration.nix
system-nix/: configuration.nix  flake.nix  hardware-configuration.nix  wsl-configuration.nix
templates/: default.nix
tmux/: .tmux.conf  tmux.conf
users/: default.nix
(+129 files in other folders)
